# daml

./: WORKSPACE  azure-pipelines.yml  build.sh
ci/: bash-lib.yml  build-unix.yml  build-windows.yml  build.yml  dev-env-install.sh  report-end.yml  report-start.yml
ci/patch_bazel_windows/: compile.yml
compatibility/: WORKSPACE
compiler/daml-lf-verify/src/DA/Daml/LF/Verify/: ReferenceSolve.hs
compiler/damlc/: BUILD.bazel
compiler/damlc/lib/DA/Cli/Damlc/: GhcPkg.hs  Packaging.hs
compiler/damlc/tests/daml-test-files/: Exceptions1.daml
compiler/repl-service/client/src/DA/Daml/LF/: ReplClient.hs
compiler/scenario-service/client/src/DA/Daml/LF/ScenarioServiceClient/: LowLevel.hs
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/speedy/: Anf.scala  Compiler.scala  Pretty.scala  SBuiltin.scala  SExpr.scala  SValue.scala  Speedy.scala
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/speedy/svalue/: Equality.scala
daml-lf/interpreter/src/test/scala/com/digitalasset/daml/lf/speedy/: ExceptionTest.scala
daml-lf/language/src/main/scala/com/digitalasset/daml/lf/language/: Ast.scala
daml-lf/parser/src/main/scala/com/digitalasset/daml/lf/testing/parser/: ExprParser.scala
daml-lf/parser/src/test/scala/com/digitalasset/daml/lf/testing/parser/: ParsersSpec.scala
daml-lf/validation/src/main/scala/com/digitalasset/daml/lf/validation/: Typing.scala
daml-script/daml/Daml/: Script.daml
daml-script/dump/: BUILD.bazel
daml-script/dump/src/it/scala/com/daml/script/dump/: IT.scala
daml-script/dump/src/main/scala/com/daml/script/dump/: Config.scala  Encode.scala  Main.scala  TreeUtils.scala
daml-script/dump/src/test/scala/com/daml/script/dump/: EncodeValueSpec.scala
daml-script/runner/src/main/scala/com/digitalasset/daml/lf/engine/script/: Converter.scala  LedgerInteraction.scala  Runner.scala
language-support/scala/bindings-akka/src/main/scala/com/digitalasset/ledger/client/binding/config/: CommandClientConfig.scala  LedgerClientConfig.scala
ledger/ledger-api-client/src/it/scala/com/digitalasset/ledger/client/: CommandClientIT.scala
ledger/ledger-api-client/src/main/scala/com/digitalasset/ledger/client/: LedgerClient.scala
ledger/ledger-api-client/src/main/scala/com/digitalasset/ledger/client/configuration/: CommandClientConfiguration.scala
ledger/ledger-api-test-tool/: BUILD.bazel  conformance.bzl
ledger/ledger-api-test-tool/src/main/scala/com/daml/ledger/api/testtool/: Cli.scala  LedgerApiTestTool.scala  Tests.scala
ledger/ledger-api-test-tool/src/main/scala/com/daml/ledger/api/testtool/infrastructure/: Dars.scala  LedgerTestCasesRunner.scala
ledger/participant-integration-api/src/main/resources/db/migration/postgres/: V41__HOT_updates_events.sha256  V41__HOT_updates_events.sql
ledger/participant-state/kvutils/app/: BUILD.bazel
ledger/sandbox-classic/src/test/suite/scala/platform/sandbox/services/command/: CommandStaticTimeIT.scala
ledger/sandbox-classic/src/test/suite/scala/platform/sandbox/stores/ledger/sql/: TransactionStreamTerminationIT.scala
ledger/test-common/: BUILD.bazel
nix/: bazel.nix  default.nix  nixpkgs.nix
nix/nixpkgs/: default.src.json
runtime-components/non-repudiation/: BUILD.bazel
runtime-components/non-repudiation-client/src/main/java/com/daml/nonrepudiation/client/: SigningInterceptor.java
runtime-components/non-repudiation/src/test/scala/com/daml/nonrepudiation/: NonRepudiationProxyConformance.scala
