# Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
    "da_scala_test",
)

da_scala_binary(
    name = "dump",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.daml.script.dump.Main",
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//daml-lf/archive:daml_lf_archive_reader",
        "//daml-lf/archive:daml_lf_dev_archive_proto_java",
        "//daml-lf/data",
        "//daml-lf/language",
        "//language-support/scala/bindings",
        "//language-support/scala/bindings-akka",
        "//ledger-api/rs-grpc-bridge",
        "//ledger/ledger-api-client",
        "//ledger/ledger-api-common",
        "@maven//:com_github_scopt_scopt_2_12",
        "@maven//:com_typesafe_akka_akka_stream_2_12",
        "@maven//:org_scalaz_scalaz_core_2_12",
        "@maven//:org_typelevel_paiges_core_2_12",
    ],
)

da_scala_test(
    name = "tests",
    srcs = glob(["src/test/scala/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":dump",
        "//daml-lf/data",
        "//language-support/scala/bindings",
        "@maven//:org_scalatest_scalatest_2_12",
        "@maven//:org_typelevel_paiges_core_2_12",
    ],
)
